syntax = "proto3";
package p1on;

import "properties.proto";

//Text in 3D space always facing the camera
message Label {
    //Name as shown in explorer
    string name = 1;
    //Text to be shown in 3D
    string description = 2;
    //True, if visible in 3D viewer
    bool isVisible = 3;
    //Text color
    ColorProperty color = 4;

    //Position of upper left corner
    VectorProperty position = 5;

    //Font size
    ScalarProperty fontSize = 6;
    //Background color
    ColorProperty background = 7;
}
